[tool.poetry]
name = "lab10"
version = "0.1.0"
description = ""
authors = ["damianhealthup <damian@healthup.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<=3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
numpy = "1.24.1"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
